Fix incorrect scoring when user wins. Improve UI on mobile

--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
 }
 
 
 
 body {
   height: 100vh;
+  width: 100vw;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
@@ -49,7 +51,6 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
   margin-bottom: 10px;
 }
 
@@ -62,6 +63,7 @@ p {
   background-color: #e7eaf6;
   border-style: none;
   border-radius: 10px;
+  padding: 5px;
   height: 40px;
   width: 80px;
 }
@@ -74,26 +76,29 @@ p {
 }
 
 .titles {
-  margin-top: 20px 10px;
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
-  height: 400px;
+  height: 20%;
+
 }
 
-.titles h2 {
-  margin-top: 20px;
+.message {
+  margin-top: 5%;
 }
+
 
 .box {
-  height: 100%;
+  height: 900%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 100px;
-  margin-bottom: 100px;
+  padding-bottom: 5%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 
@@ -101,12 +106,17 @@ p {
 
   border-color: #001f3f;
   border-radius: 10px;
-  width: 30%;
-  max-width: 400px;
-  height:640px;
+  width: 40%;
+  max-width: 700px;
+  min-width: 280px;
+  height: 75%;
+  max-height: 700px;
+  min-height: 300px;
   padding: 10px;
-  display: flex;
+
+  flex-shrink: 0;
   background-color: #38598b;
+  
 
 }
 
@@ -115,28 +125,36 @@ p {
   margin: 10px;
   padding: 10px;
   height: 160px;
+  height: 30%;
   min-height: 120px;
   font-family:FreeMono;
   background-color: #083358;
   border-radius: 10px;
+  
+  
 }
 
 
 .textBetween {
   display: flex;
   justify-content: space-around;
-  padding-bottom: 15px;
+  padding: 5px;
 }
 
-.scoreTitle {
-  font-size: 20px;
+.scoreTitle, .scoreValue {
+  font-size: 26px;
 }
 
 .scoreValue {
   display: flex;
   justify-content: space-around;
+  font-weight: 600;
+  margin-bottom: 2%;
 }
 
+.round {
+  font-size: 20px;
+}
 
 .btns{
   display: flex;
@@ -144,13 +162,15 @@ p {
   justify-content: space-evenly;
   align-items: center;
   border-radius: 10px;
-  height: 500px;
+  /*height: 500px;*/
+  height: 70%;
   margin: 10px;
   background-color: #083358;
 }
 
 .btns button {
-  height: 100px;
+  /*height: 100px;*/
+  height: 25%;
   width: 90%;
   margin: 5px;
   background-color: #a2a8d3;
@@ -165,3 +185,8 @@ button {
   font-weight: 600;
 }
 
+@media screen and (max-width: 768px) {
+  p {
+    font-size: 20px;
+  }
+}
